<resources>
    <string name="app_name">ToolBox</string>
    <string name="dummy_button">Next</string>
    <string name="dummy_content">Welcome!</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="MenuTitle">Please Select A Tool.</string>
    <string name="action_settings">Settings</string>

    <string name="Calculater">Calculater</string>A
    <string name="Conversion">Conversion</string>
    <string name="ImageExplore">ImageExplore</string>
    <string name="Timer">Timer</string>
    <string name="Return">Return</string>

    <string name="title_activity_calculater">Calculater</string>
    <string name="answer">Answer</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="canNotBeZero">The divisor mustn\'t be 0</string>
    <string name="sendResult">Send Result</string>


    <string name="title_activity_conversion">Conversion</string>
    <string name="type">Select Type</string>
    <string name="length">Length</string>
    <string name="time">Time</string>
    <string name="unit">Select Unit</string>
    <string name="input">Enter number</string>
    <string name="to">To</string>
    <string name="output">Conversion Result</string>
    <string name="conversion">Conversion</string>
    <string name="caculate">Caculate</string>
    <string-array name="length_list">
        <item>meter</item>
        <item>centimeter</item>
        <item>millimeter</item>
    </string-array>
    <string-array name="time_list">
        <item>day</item>
        <item>hour</item>
        <item>minute</item>
        <item>second</item>
    </string-array>


    <string name="title_activity_image">ImageViewer</string>
    <string name="OpenExplore">Explore Image</string>
    <string name="ImageViewContentDescription">ImageExplore</string>
    <string name="title_activity_timer">TimerActivity</string>

    <string name="TimeInital">00:00</string>
    <string name="TimeBtnInitial">Start</string>
    <string name="TimeBtnStop">Stop</string>
    <string name="TimeBtnClear">Clear</string>




</resources>
